[tool.poetry]
name = "pycounts_dlam"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Dominic Lam"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pycounts_dlam", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.4.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
